Specify format for the tick labels Support absolute boolean to show labels as absolute values.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docs": "echo \"*** Building API docs\n\" && react-docgen src/components -x js -o src/website/api/docs.json --pretty",
     "lint": "eslint src/*.jsx src/*.js",
     "test": "npm run lint",
-    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components --stage 0 --out-dir lib/components && babel src/js --stage 0 --out-dir lib/js && babel src/entry.js --stage 0 --out-file lib/entry.js",
+    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js",
     "start-website": "react-scripts start",
     "build-website": "echo \"*** Building website\n\" && rm -rf docs && react-scripts build && mv build docs"
   },
