--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "react-axis",
   "version": "0.1.0",
-  "description": "A flexible axis component build with React",
+  "description": "An axis component build with React",
   "keywords": [
     "axis",
+    "timezones",
+    "timezone",
+    "time",
+    "moment",
+    "d3",
     "charts",
     "react"
   ],
@@ -17,7 +22,7 @@
   "scripts": {
     "docs": "echo \"*** Building API docs\n\" && react-docgen src/components -x js -o src/website/api/docs.json --pretty",
     "lint": "eslint src/*.jsx src/*.js",
-    "test": "npm run lint",
+    "test": "react-scripts test --env=jsdom",
     "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js",
     "start-website": "react-scripts start",
     "build-website": "echo \"*** Building website\n\" && rm -rf docs && react-scripts build && mv build docs"
@@ -30,11 +35,9 @@
   "dependencies": {
     "d3-format": "^0.5.1",
     "d3-scale": "^0.7.2",
-    "d3-time": "^0.2.5",
-    "d3-time-format": "^0.3.1",
     "merge": "^1.2.0",
-    "moment": "^2.8.4",
-    "moment-duration-format": "^1.3.0",
+    "moment": "^2.15.2",
+    "moment-timezone": "^0.5.10",
     "react-addons-css-transition-group": "^15.3.1"
   },
   "peerDependencies": {
@@ -54,8 +57,9 @@
     "react-dom": "^15.3.1",
     "react-markdown": "^1.0.5",
     "react-router": "^2.6.1",
-    "react-scripts": "^0.2.2",
-    "underscore": "^1.8.3"
+    "react-scripts": "^0.8.3",
+    "underscore": "^1.8.3",
+    "webpack": "^1.14.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
