--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-axis",
   "version": "0.1.0",
-  "description": "An axis component build with React",
+  "description": "An axis component built with React",
   "keywords": [
     "axis",
     "timezones",
@@ -58,6 +58,7 @@
     "react-markdown": "^1.0.5",
     "react-router": "^2.6.1",
     "react-scripts": "^0.8.3",
+    "react-test-renderer": "^15.4.1",
     "underscore": "^1.8.3",
     "webpack": "^1.14.0"
   },
