Rearranged the formatting code so that it uses formatters. We should test these formatters. Separated the duration formatter from the date->string code Add a single functional test for the duration formatter Removed inline styling from the transition now as it broke fade in/out

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "scripts": {
     "docs": "echo \"*** Building API docs\n\" && react-docgen src/components -x js -o src/website/api/docs.json --pretty",
-    "lint": "eslint src/*.jsx src/*.js",
+    "lint": "eslint src/*.js",
     "test": "react-scripts test --env=jsdom",
-    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js",
+    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components  --ignore *.test.js --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js",
     "start-website": "react-scripts start",
     "build-website": "echo \"*** Building website\n\" && rm -rf docs && react-scripts build && mv build docs"
   },
