--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "docs": "echo \"*** Building API docs\n\" && react-docgen src/components -x js -o src/website/api/docs.json --pretty",
     "lint": "eslint src/*.js",
     "test": "react-scripts test --env=jsdom",
-    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components  --ignore *.test.js --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js",
+    "build-lib": "echo \"*** Building lib\n\" && rm -rf lib/* && babel src/components  --ignore *.test.js --stage 0 --out-dir lib/components && babel src/entry.js --stage 0 --out-file lib/entry.js && cp src/components/*.css lib/components/",
     "start-website": "react-scripts start",
     "build-website": "echo \"*** Building website\n\" && rm -rf docs && react-scripts build && mv build docs"
   },
